--- a/Html/teste.css
+++ b/Html/teste.css
@@ -1,44 +1,659 @@
-*{margin: 0; padding: 0;}
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&family=Rubik&display=swap");
+@font-face {
+  font-family: "Pricedown";
+  src: url("pricedow.ttf") format("truetype");
+}
+@import url('https://fonts.cdnfonts.com/css/pricedown');
+
+/* body{
+    width: 100vw;
+    overflow-x: hidden;
+    height: 200vh;
+    background: linear-gradient(to bottom, rgba(255,255,255,0.15) 0%, rgba(0,0,0,0.15) 100%), radial-gradient(at top center, rgba(255,255,255,0.40) 0%, rgba(0,0,0,0.40) 120%) #989898;
+    background-blend-mode: multiply,multiply;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #ffffff;
+  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Rubik", sans-serif;
+}
+
 
 body{
-font-family: arial, helvetica, sans-serif;
-font-size: 12px;
+  height: 100vh;
+  width: 100vw;
+  background-image: url("./assets/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  overflow-x: hidden;
 }
 
-.menu{
-list-style:none;
-border:1px solid #c0c0c0;
-float:left;
+
+
+body,
+ul {
+  margin: 0px;
+  padding: 0px;
 }
 
-.menu li{
-    position:relative;
-    float:left;
-    border-right:1px solid #c0c0c0;
+a {
+  color: black;
+  text-decoration: none;
+  font-family: sans-serif;
 }
 
-.menu li a{color:#333; text-decoration:none; padding:5px 10px; display:block;}
-
-.menu li a:hover{
-background:#333;
-color:#fff;
--moz-box-shadow:0 3px 10px 0 #CCC;
--webkit-box-shadow:0 3px 10px 0 #ccc;
-text-shadow:0px 0px 5px #fff;
+a:hover {
+  background: rgba(0, 0, 0, 0.05);
 }
 
-.menu li  ul{
-    position:absolute;
-    top:25px;
-    left:0;
-    background-color:#fff;
-    display:none;
+#logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: "Pricedown";
+  font-size: 2rem;
+  color: white;
+  text-shadow: 
+  -1px -1px 0px black, 
+  -1px 1px 0px black,                    
+   1px -1px 0px black,                  
+   1px 0px 0px black;
+   height: 55px;
 }
 
-.menu li:hover ul, .menu li.over ul{display:block;}
-
-.menu li ul li{
-    border:1px solid #c0c0c0;
-    display:block;
-    width:150px;
+#logo img{
+    height: 100%;
 }
+
+#header {
+  box-sizing: border-box;
+  height: fit-content;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: rgba(0, 0, 0, 0.8);
+  flex-wrap: wrap;
+  border-bottom: 1px solid #f0e3be;
+}
+
+#menu {
+  display: flex;
+  list-style: none;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+
+#menu a {
+  display: block;
+  padding: 0.5rem;
+  color: white;
+  text-decoration: none;
+  font-family: "Pricedown";
+  font-size: 1.7rem;
+  text-shadow: 
+  -1px -1px 0px black, 
+  -1px 1px 0px black,                    
+   1px -1px 0px black,                  
+   1px 0px 0px black;
+}
+
+#menu a:hover{
+    color: aqua;
+    border-bottom: none;
+  }
+  
+
+#btn-mobile {
+  display: none;
+}
+
+main {
+    position: fixed;
+    display: grid;
+    width: 70%;
+    height: 79%;
+    margin-top: 5vh;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    grid-template-areas: "principal lado";
+  }
+  
+  .principal {
+    padding-bottom: 20px;
+    border-top: 1px solid #f0e3be;
+    border-bottom: 1px solid #f0e3be;
+    background: rgba(0, 0, 0, 0.8);
+    color: #ffffff;
+    text-align: center;
+    display: inline-block;
+    grid-area: principal;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    /* border-right: 1px solid #f0e3be; */
+  }
+  
+  h1 {
+    font-family: 'Pricedown';
+    margin: 0 auto;
+    text-shadow: 
+    -1px -1px 0px black, 
+    -1px 1px 0px black,                    
+     1px -1px 0px black,                  
+     1px 0px 0px black;
+
+  }
+  
+  .contend{
+    width: 100%;
+    height: 69%;
+    display: grid;
+    justify-items: center;
+  }
+  
+  .contend p {
+    font-size: 1rem;
+    text-align: left;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 12px;
+  }
+  
+  .imagens-jp {
+    border-radius: 10px;
+    width: 40%;
+    background-color: black;
+    margin: 0 auto;
+    border: 1px solid #f0e3be;
+    display: inline-grid;
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+  
+  .imagens-jp img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    width: 100%;
+    border-bottom: 1px solid #f0e3be;
+  }
+  
+  .imagens-jp p{
+    padding-bottom: 0px;
+  }
+  
+  
+  .imgbox {
+    width: 100%;
+    height: 170px;
+    background-color: black;
+    border-bottom: 1px solid #f0e3be;
+  }
+  
+  .imgbox > img {
+    height: 100%;
+  }
+  
+  .universos_ul {
+    margin: 0 auto;
+    margin-top: 10px;
+    display: inline-flex;
+    list-style: none;
+    gap: 30px;
+  }
+  
+  
+  .universos_ul > li:hover {
+    cursor: pointer;
+    background-color: rgba(124, 119, 119, 0.4); 
+    border-radius: 10px;
+    padding: 10px;
+  }
+  
+  .lado_dois {
+    display: none;
+  }
+  
+  .lado li{
+    font-size: 1rem;
+  }
+  
+  .lado {
+    border: 1px solid #f0e3be;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    grid-area: lado;
+    background: rgba(0, 0, 0, 0.8);
+    grid-column-start: 3;
+    grid-column-end: 4;
+    height: 100%;
+    width: 200px;
+    text-align: center;
+  }
+  
+  .lado > .destaques {
+    list-style: none;
+    display: flex;
+    height: 50%;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .lado > .criadores {
+    list-style: none;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .lado > h2 {
+    font-size: 18px;
+    width: max-content;
+    margin: 0 auto;
+  }
+  
+  .lado > .destaques > li {
+    margin-top: 10px;
+    cursor: pointer;
+  }
+  
+  .lado > ul > li:hover {
+    color: aqua;
+  }
+  
+  hr {
+    width: 72%;
+    margin: 0 auto;
+    margin-top: 10px;
+  }
+  
+  .separador {
+    width: 100%;
+    border-color: #f0e3be;
+  }
+  
+  .lado > .criadores > li {
+    margin-top: 10px;
+    cursor: pointer;
+  }
+  
+  .imagem {
+    position: fixed;
+    height: 69%;
+    margin-left: 75.8%;
+    bottom: 0%;
+    transition: transform 0.3s ease-in-out; /* Adiciona uma transição suave */
+  }
+
+  .imagem img{
+    height: 100%;
+  }
+  
+  #mainnav {
+    display: none;
+  }
+  
+  #mainnav .submenu li a{
+    text-decoration: none;
+  }
+  
+  .imgboxheader{
+    display: none;
+  }
+  
+  
+  @media screen and (max-width: 1200px) {
+    .imagem {
+      transform: translateX(-50px); /* Move a imagem 100px para a esquerda */
+    }
+  }
+
+  @media screen and (max-width: 1175px) {
+    main{
+      height: 80%;
+      margin-top: 0px;
+    }
+    .principal{
+      border-top: none;
+    }
+    .lado{
+      border-top-right-radius: 0px;
+      border-bottom-right-radius: 0px;
+      border-top: 0px;
+    }
+    #header{
+      justify-content: center;
+    }
+  }
+  
+  
+  
+  @media screen and (max-width: 1080px) {
+    .imagem {
+      height: 50%;
+      margin-left: 78.8%;
+      margin-top: 41vh;
+    }
+  }
+  
+  #intro-jogos{
+    display: none;
+    margin-top: 10px;
+    font-size: 5rem;
+    margin-bottom: -15px;
+  }
+  
+  @media screen and (max-width: 1045px) {
+    .imagem {
+      display: none;
+    }
+  
+    main {
+      width: 100%;
+    }
+
+    .wrapper {
+      background-color: rgba(0, 0, 0, 0.8);
+      height: 100%;
+    }
+  
+    .lado {
+      border: 1px solid #f0e3be;
+      border-top: none;
+      border-right: none;
+      border-top-right-radius: 0px;
+      border-bottom-right-radius: 0px;
+      grid-area: lado;
+      background: rgba(0, 0, 0, 0.8);
+      grid-column-start: 3;
+      grid-column-end: 4;
+      height: 100%;
+      width: 200px;
+      text-align: center;
+    }
+  }
+
+  @media screen and (max-width: 993px) {
+    #menu a{
+      font-size: 1.6rem;
+    }
+    main{
+      height: 81.2%;
+    }
+    .lado{
+      border-top: none;
+    }
+    #header{
+      justify-content: space-between;
+    }
+  }
+
+    
+@media (max-width: 933px) {
+  #menu {
+    display: block;
+    position: absolute;
+    width: 100%;
+    top: 70px;
+    right: 0px;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(1px);
+    transition: 0.6s;
+    z-index: 1000;
+    height: 0px;
+    visibility: hidden;
+    overflow-y: hidden;
+  }
+  #nav.active #menu {
+    height: calc(97vh - 70px);
+    margin-top: 17px;
+    visibility: visible;
+    overflow-y: auto;
+  }
+  #menu a {
+    padding: 1rem 0;
+    margin: 0 1rem;
+    border-bottom: 2px solid #f0e3be;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+
+  
+  #btn-mobile {
+    display: flex;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    cursor: pointer;
+    gap: 0.5rem;
+  }
+  #hamburger {
+    border-top: 2px solid;
+    width: 30px;
+  }
+  #hamburger::after,
+  #hamburger::before {
+    content: '';
+    display: block;
+    width: 30px;
+    height: 2px;
+    background: currentColor;
+    margin-top: 5px;
+    transition: 0.3s;
+    position: relative;
+  }
+  #nav.active #hamburger {
+    border-top-color: transparent;
+  }
+  #nav.active #hamburger::before {
+    transform: rotate(135deg);
+  }
+  #nav.active #hamburger::after {
+    transform: rotate(-135deg);
+    top: -7px;
+  }
+
+  main{
+    height: 88%;
+  }
+
+  #n555{
+    border-top: 2px solid #f0e3be;
+  }
+
+}
+  
+  @media screen and (max-width: 830px) {
+    .lista img {
+      height: 40%;
+      position: relative;
+      top: 0%;
+    }
+
+    .submenu li {
+      left: 0px;
+      font-size: 5rem;
+    }
+  }
+  
+  @media screen and (max-width: 780px) {
+    .principal > p {
+      width: 80%;
+    }
+  
+    .imgbox {
+      height: 130px;
+    }
+  }
+
+  @media screen and (max-width: 667px) {
+  
+    .contend{
+      display: block;
+    }
+  
+  
+    .universos h2{
+      font-size: 5rem;
+    }
+  
+    .imgbox{
+      display: none;
+    }
+  
+  
+  #intro-jogos{
+    display: block;
+  }
+
+  #header{
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+  }
+
+
+  
+    main {
+      position: relative;
+      display: grid;
+      width: 100%;
+      margin-top: 0px;
+      padding-bottom: 30px;
+      grid-template-areas:
+        "principal"
+        "lado";
+    }
+  
+    .principal {
+      padding-bottom: 5%;
+      margin-top: 88px;
+    }
+  
+    .lado {
+      padding-bottom: 4%;
+      border-right: none;
+      border-left: none;
+      border-top: none;
+      grid-area: lado;
+      background: rgba(0, 0, 0, 0.8);
+      grid-column-start: 1;
+      grid-column-end: 4;
+      width: 100%;
+      text-align: center;
+    }
+  
+    .lado > .destaques{
+      border-bottom: 2px solid #f0e3be;
+    }
+  
+    .lado > .criadores{
+      height: 53%;
+      padding-top: 10%;
+      justify-content: flex-end;
+    }
+  }
+  
+  .universos > h2 {
+    font-size: 5rem;
+    margin: 0px auto;
+    width: 90%;
+    margin-bottom: 2%;
+    margin-top: 11px;
+  }
+  
+  .separador{
+    display: none;
+  }
+  
+  @media screen and (max-width: 521px) {
+    .imgboxheader{
+      background-color: black;
+      height: 100%;
+      display: flex;
+      align-items: center;
+    }
+  
+    .imgboxheader img{
+      height: 78%;
+    }
+
+    .contend p {
+      text-align: center;
+    }
+  
+  }
+  
+  
+  @media screen and (max-width: 414px) {
+    .universos .universos_ul img {
+      height: 80px;
+    }
+  
+    .imgboxheader img{
+      height: 60%;
+    }
+  }
+
+  @media screen and (max-width: 340px) {
+    .images{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+
+
+    }
+  
+  @media screen and (max-width: 340px) {
+    main {
+      background-color: none;
+    }
+  
+    .principal > p {
+      width: 97%;
+      font-size: 5rem;
+    }
+  
+    hr {
+      margin-top: 0px;
+    }
+  
+  
+    .universos {
+      background-color: rgba(0, 0, 0, 0);
+      width: 100%;
+    }
+  
+    .universos > h2 {
+      font-size: 2rem;
+      margin: 0px auto;
+      width: 80%;
+      height: 50%;
+      margin-bottom: -8%;
+    }
+  
+    .universos > .universos_ul {
+      width: 100%;
+      gap: 2%;
+      justify-content: center;
+    }
+  
+    .universos_ul li {
+      margin-top: 10%;
+      height: fit-content;
+    }
+  
+    .universos .universos_ul img {
+      height: 80px;
+    }
+  }
