--- a/Html/index.css
+++ b/Html/index.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;900&family=Roboto+Condensed&family=Rubik&display=swap");
+
 @font-face {
   font-family: "Pricedown";
   src: url("pricedow.ttf") format("truetype");
 }
+
 @import url('https://fonts.cdnfonts.com/css/pricedown');
 
 /* body{
@@ -24,153 +26,133 @@
   font-family: "Rubik", sans-serif;
 }
 
-header {
-  position: absolute;
-  display: flex;
-  gap: 10%;
-  height: 9%;
+
+body {
+  height: 100vh;
   width: 100%;
-  background: rgba(0, 0, 0, 0.8);
-  border-bottom: 1px solid #f0e3be;
-  align-items: center;
-  justify-content: flex-start;
+  background-image: url("./assets/background.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  overflow-x: hidden;
 }
 
-header > nav {
-  height: 100%;
-  display: flex;
+
+
+body,
+ul {
+  margin: 0px;
+  padding: 0px;
 }
 
-#header-img {
-  display: none;
-}
-
-.lista {
-  position: relative;
-  height: 100%;
-  display: inline-flex;
-  width: 100%;
-  list-style: none;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
-  gap: 20px;
-}
-
-.lista li {
-  height: 40px;
-  display: grid;
-  align-items: center;
-  border-radius: 10px;
-}
-
-.lista li a{
-  color: rgb(68, 175, 29);
-  border-bottom: 1px solid rgb(255, 255, 255);
+a {
+  color: black;
   text-decoration: none;
-  font-family: 'Pricedown';
-  font-size: 1.7rem;
-  text-shadow: 
-  -1px -1px 0px black, 
-  -1px 1px 0px black,                    
-   1px -1px 0px black,                  
-   1px 0px 0px black;
+  font-family: sans-serif;
 }
 
-#logo{
-  height: 65%;
+a:hover {
+  background: rgba(0, 0, 0, 0.05);
 }
 
-#logo img{
+#logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: "Pricedown";
+  font-size: 2rem;
+  color: white;
+  text-shadow:
+    -1px -1px 0px black,
+    -1px 1px 0px black,
+    1px -1px 0px black,
+    1px 0px 0px black;
+  height: 55px;
+}
+
+#logo img {
   height: 100%;
 }
 
-.lista li a:hover{
+#header {
+  box-sizing: border-box;
+  height: fit-content;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: rgba(0, 0, 0, 0.9);
+  flex-wrap: wrap;
+  border-bottom: 1px solid #f0e3be;
+}
+
+#menu {
+  display: flex;
+  list-style: none;
+  gap: 0.5rem;
+  flex-wrap: wrap;
+}
+
+#menu a {
+  display: block;
+  padding: 0.5rem;
+  color: white;
+  text-decoration: none;
+  font-family: "Pricedown";
+  font-size: 1.7rem;
+  text-shadow:
+    -1px -1px 0px black,
+    -1px 1px 0px black,
+    1px -1px 0px black,
+    1px 0px 0px black;
+}
+
+#menu a:hover {
   color: aqua;
   border-bottom: none;
 }
 
-.button {
-  height: 100%;
-  margin: 0 auto;
-  padding-left: 5px;
-  padding-right: 5px;
-}
 
-.button:not(:last-child) {
-  border-right: 1px solid #f0e3be;
-}
-
-.submenu {
+#btn-mobile {
   display: none;
-}
-
-li:hover .submenu {
-  position: absolute;
-  list-style: none;
-  left: 0%;
-  background-color: #000000;
-  border: 1px solid #f0e3be;
-  display: flex;
-  gap: 20px;
-  top: 100%;
-  width: 100%;
-  height: 90%;
-  justify-content: center;
-}
-
-.submenu li {
-  color: #ffffff;
-  font-size: 20px;
-  font-family: "Montserrat", sans-serif;
-  font-family: "Roboto Condensed", sans-serif;
-  font-family: "Rubik", sans-serif;
-  position: relative;
-  top: 0%;
-}
-
-.submenu li a:hover {
-  color: aqua;
-  cursor: pointer;
-}
-
-.lista img {
-  height: 50%;
-  position: relative;
-  top: 0%;
 }
 
 main {
   position: fixed;
   display: grid;
   width: 70%;
-  height: 75%;
-  margin-top: 18vh;
+  height: 79%;
+  margin-top: 5vh;
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   grid-template-areas: "principal lado";
 }
 
 .principal {
+  padding-bottom: 20px;
   border-top: 1px solid #f0e3be;
   border-bottom: 1px solid #f0e3be;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
   color: #ffffff;
   text-align: center;
   display: inline-block;
   grid-area: principal;
   grid-column-start: 1;
   grid-column-end: 3;
-  height: 100%;
   /* border-right: 1px solid #f0e3be; */
 }
 
 h1 {
   font-family: 'Pricedown';
   margin: 0 auto;
+  text-shadow:
+    -1px -1px 0px black,
+    -1px 1px 0px black,
+    1px -1px 0px black,
+    1px 0px 0px black;
+
 }
 
-.contend{
+.contend {
   width: 100%;
   height: 69%;
   display: grid;
@@ -203,7 +185,7 @@ h1 {
   border-bottom: 1px solid #f0e3be;
 }
 
-.imagens-jp p{
+.imagens-jp p {
   padding-bottom: 0px;
 }
 
@@ -215,7 +197,7 @@ h1 {
   border-bottom: 1px solid #f0e3be;
 }
 
-.imgbox > img {
+.imgbox>img {
   height: 100%;
 }
 
@@ -227,16 +209,10 @@ h1 {
   gap: 30px;
 }
 
-span {
-  background-color: rgba(124, 119, 119, 0.8);
-  border-radius: 10px;
-  display: block;
-  margin-bottom: 5px;
-}
 
-.universos_ul > li:hover {
+.universos_ul>li:hover {
   cursor: pointer;
-  background-color: rgba(124, 119, 119, 0.4); 
+  background-color: rgba(124, 119, 119, 0.4);
   border-radius: 10px;
   padding: 10px;
 }
@@ -245,7 +221,7 @@ span {
   display: none;
 }
 
-.lado li{
+.lado li {
   font-size: 1rem;
 }
 
@@ -254,7 +230,7 @@ span {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   grid-area: lado;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, 0.9);
   grid-column-start: 3;
   grid-column-end: 4;
   height: 100%;
@@ -262,7 +238,7 @@ span {
   text-align: center;
 }
 
-.lado > .destaques {
+.lado>.destaques {
   list-style: none;
   display: flex;
   height: 50%;
@@ -270,7 +246,7 @@ span {
   justify-content: center;
 }
 
-.lado > .criadores {
+.lado>.criadores {
   list-style: none;
   height: 50%;
   display: flex;
@@ -279,23 +255,23 @@ span {
   justify-content: center;
 }
 
-.lado > h2 {
+.lado>h2 {
   font-size: 18px;
   width: max-content;
   margin: 0 auto;
 }
 
-.lado > .destaques > li {
+.lado>.destaques>li {
   margin-top: 10px;
   cursor: pointer;
 }
 
-.lado > ul > li:hover {
+.lado>ul>li:hover {
   color: aqua;
 }
 
 hr {
-  width: 80%;
+  width: 72%;
   margin: 0 auto;
   margin-top: 10px;
 }
@@ -305,49 +281,65 @@ hr {
   border-color: #f0e3be;
 }
 
-.lado > .criadores > li {
+.lado>.criadores>li {
   margin-top: 10px;
   cursor: pointer;
 }
 
 .imagem {
-  position: relative;
-  display: flex;
+  position: fixed;
   height: 69%;
   margin-left: 75.8%;
-  margin-top: 20vh;
-  transition: transform 0.3s ease-in-out; /* Adiciona uma transição suave */
+  bottom: 0%;
+  transition: transform 0.3s ease-in-out;
+  /* Adiciona uma transição suave */
 }
 
-.imagem img{
-  width: 100%;
+.imagem img {
+  height: 100%;
 }
 
 #mainnav {
   display: none;
 }
 
-#mainnav .submenu li a{
+#mainnav .submenu li a {
   text-decoration: none;
 }
 
-.imgboxheader{
+.imgboxheader {
   display: none;
 }
 
 
 @media screen and (max-width: 1200px) {
   .imagem {
-    transform: translateX(-50px); /* Move a imagem 100px para a esquerda */
+    transform: translateX(-50px);
+    /* Move a imagem 100px para a esquerda */
   }
 }
 
-@media screen and (max-width: 1200px) {
-  header{
-    gap: 0px;
-    justify-content: space-between;
+@media screen and (max-width: 1175px) {
+  main {
+    height: 80%;
+    margin-top: 0px;
+  }
+
+  .principal {
+    border-top: none;
+  }
+
+  .lado {
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    border-top: 0px;
+  }
+
+  #header {
+    justify-content: center;
   }
 }
+
 
 
 @media screen and (max-width: 1080px) {
@@ -358,7 +350,7 @@ hr {
   }
 }
 
-#intro-jogos{
+#intro-jogos {
   display: none;
   margin-top: 10px;
   font-size: 5rem;
@@ -374,19 +366,125 @@ hr {
     width: 100%;
   }
 
+  .wrapper {
+    background-color: rgba(0, 0, 0, 0.8);
+    height: 100%;
+  }
+
   .lado {
     border: 1px solid #f0e3be;
+    border-top: none;
     border-right: none;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
     grid-area: lado;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.9);
     grid-column-start: 3;
     grid-column-end: 4;
     height: 100%;
     width: 200px;
     text-align: center;
   }
+}
+
+@media screen and (max-width: 993px) {
+  #menu a {
+    font-size: 1.6rem;
+  }
+
+  main {
+    height: 81.2%;
+  }
+
+  .lado {
+    border-top: none;
+  }
+
+  #header {
+    justify-content: space-between;
+  }
+}
+
+
+@media (max-width: 933px) {
+  #menu {
+    display: block;
+    position: absolute;
+    width: 100%;
+    top: 70px;
+    right: 0px;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(1px);
+    transition: 0.6s;
+    z-index: 1000;
+    height: 0px;
+    visibility: hidden;
+    overflow-y: hidden;
+  }
+
+  #nav.active #menu {
+    height: calc(97vh - 70px);
+    margin-top: 17px;
+    visibility: visible;
+    overflow-y: auto;
+  }
+
+  #menu a {
+    padding: 1rem 0;
+    border-bottom: 2px solid #f0e3be;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.6);
+  }
+
+
+  #btn-mobile {
+    display: flex;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    cursor: pointer;
+    gap: 0.5rem;
+  }
+
+  #hamburger {
+    border-top: 2px solid;
+    width: 30px;
+  }
+
+  #hamburger::after,
+  #hamburger::before {
+    content: '';
+    display: block;
+    width: 30px;
+    height: 2px;
+    background: currentColor;
+    margin-top: 5px;
+    transition: 0.3s;
+    position: relative;
+  }
+
+  #nav.active #hamburger {
+    border-top-color: transparent;
+  }
+
+  #nav.active #hamburger::before {
+    transform: rotate(135deg);
+  }
+
+  #nav.active #hamburger::after {
+    transform: rotate(-135deg);
+    top: -7px;
+  }
+
+  main {
+    height: 88%;
+  }
+
+  #n555 {
+    border-top: 2px solid #f0e3be;
+  }
+
 }
 
 @media screen and (max-width: 830px) {
@@ -403,7 +501,7 @@ hr {
 }
 
 @media screen and (max-width: 780px) {
-  .principal > p {
+  .principal>p {
     width: 80%;
   }
 
@@ -412,202 +510,105 @@ hr {
   }
 }
 
-header {
-  height: 9%;
-}
-
-header > nav > ul {
-  height: 100%;
-}
-
 @media screen and (max-width: 667px) {
-  header {
-    height: 20%;
-    width: 100%;
-    display: block;
-    justify-content: space-between;
-  }
 
-  .contend{
-    display: block;
-  }
-
-
-  .universos h2{
-    font-size: 5rem;
-  }
-
-  header nav {
-    display: none;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-
-  .imgbox{
-    display: none;
-  }
-
-  .imgboxheader{
-    background-color: black;
-    height: 100%;
-    display: flex;
-    align-items: center;
-  }
-
-  .imgboxheader img{
-    height: 100%;
-    margin: 0 auto;
-  }
-
-
-#intro-jogos{
-  display: block;
-}
-
-
-  .lista {
-    display: flex;
-    margin-bottom: 0%;
-    flex-direction: column;
-    border-radius: 0px
-  }
-
-  .lista li {
-    width: 100%;
-    margin-top: 0%;
-  }
-
-  #n5987{
-    background-color: black;
-    border: 1px solid#f0e3be;
-    padding: 10px;
-  }
-
-  .button {
-    border-bottom: 1px solid#f0e3be;
-    border-left: 1px solid#f0e3be;
-  }
-
-  .button:last-child{
-    border-right: 1px solid#f0e3be;
-  }
-
-  .lista img {
-    height: 60%;
-    margin: 0 auto;
-    position: relative;
-    top: 0%;
-  }
-
-  .button:hover .submenu {
-    width: 100%;
-    padding: 10px;
-    padding-right: 2%;
-    border: none;
-    top: 0px;
-    position: relative;
+  body {
     height: fit-content;
-    background-color: rgba(0, 0, 0, 0);
-    width: fit-content;
-    margin: 0 auto;
-    margin-top: -20px;
-    display: table-cell;
-    text-align: center;
+    display: flex;
+    justify-items: start;
+    grid-template-columns: repeat(1, 1fr);
+    grid-auto-rows: 0px;
+    grid-template-areas:
+      "header"
+      "main";
+    justify-content: center;
   }
 
-  .submenu li {
-    padding-bottom: 10%;
+  #header {
+    grid-area: header;
+    background-color: black
   }
 
-  #mainnav {
-    border: none;
-    margin-top: 20px;
-    display: inline-flex;
-    margin-bottom: 20px;
-    float: left;
+  .contend {
+    margin-top: 10px;
+    display: block;
+    height: fit-content;
   }
 
-  .submenu li a {
+
+  .universos h2 {
     font-size: 5rem;
-    color: rgb(255, 255, 255);
-    border-bottom: 1px solid white;
-    top: 0%;
   }
 
-  .submenu li a:hover {
-    color: aqua;
-    border-bottom: none;
-    top: 0%;
+  .imgbox {
+    display: none;
   }
 
-  .button:hover {
-    background-color: rgba(0, 0, 0);
+
+  #intro-jogos {
+    display: block;
   }
 
+  #header {
+    position: fixed;
+    width: 100%;
+    z-index: 999;
+  }
 
   main {
     position: relative;
+    margin-top: 88px;
     display: grid;
     width: 100%;
-    margin-top: 0px;
-    padding-bottom: 30px;
+    height: 94%;
+    grid-area: main;
     grid-template-areas:
       "principal"
       "lado";
-  }
-
-  .principal {
-    padding-bottom: 7%;
+    grid-template-columns: repeat(1, 1fr);
   }
 
   .lado {
-    padding-top: 2%;
-    padding-bottom: 4%;
-    border-right: none;
-    border-left: none;
-    border-top: none;
+    padding-bottom: 6%;
+    border: none;
     grid-area: lado;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.9);
     grid-column-start: 1;
     grid-column-end: 4;
     width: 100%;
     text-align: center;
   }
 
-  .lado > .destaques{
+  .lado>.destaques {
     border-bottom: 2px solid #f0e3be;
   }
 
-  .lado > .criadores{
+  .lado>.criadores {
     height: 53%;
     padding-top: 10%;
     justify-content: flex-end;
   }
 }
 
-.universos > h2 {
-  font-size: 5rem;
-  margin: 0px auto;
-  width: 90%;
-  margin-bottom: 2%;
-  margin-top: 11px;
-}
 
-.separador{
+.separador {
   display: none;
 }
 
-
 @media screen and (max-width: 521px) {
-  .imgboxheader{
+  .imgboxheader {
     background-color: black;
     height: 100%;
     display: flex;
     align-items: center;
   }
 
-  .imgboxheader img{
+  .imgboxheader img {
     height: 78%;
+  }
+
+  .contend p {
+    text-align: center;
   }
 
 }
@@ -618,9 +619,20 @@ header > nav > ul {
     height: 80px;
   }
 
-  .imgboxheader img{
+  .imgboxheader img {
     height: 60%;
   }
+}
+
+@media screen and (max-width: 340px) {
+  .images {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+
 }
 
 @media screen and (max-width: 340px) {
@@ -628,7 +640,7 @@ header > nav > ul {
     background-color: none;
   }
 
-  .principal > p {
+  .principal>p {
     width: 97%;
     font-size: 5rem;
   }
@@ -643,7 +655,7 @@ header > nav > ul {
     width: 100%;
   }
 
-  .universos > h2 {
+  .universos>h2 {
     font-size: 2rem;
     margin: 0px auto;
     width: 80%;
@@ -651,16 +663,10 @@ header > nav > ul {
     margin-bottom: -8%;
   }
 
-  .universos > .universos_ul {
+  .universos>.universos_ul {
     width: 100%;
     gap: 2%;
     justify-content: center;
-  }
-
-  span {
-    width: 90%;
-    margin-left: 2%;
-    display: block;
   }
 
   .universos_ul li {
